src/test/ui/borrowck/borrowck-vec-pattern-element-loan.stderr
error[E0597]: `vec` does not live long enough
  --> $DIR/borrowck-vec-pattern-element-loan.rs:3:25
   |
LL |     let vec: &[isize] = &vec;
   |                         ^^^^ borrowed value does not live long enough
...
LL | }
   | -- borrow later used here
   | |
   | `vec` dropped here while still borrowed

error[E0597]: `vec` does not live long enough
  --> $DIR/borrowck-vec-pattern-element-loan.rs:13:25
   |
LL |     let vec: &[isize] = &vec;
   |                         ^^^^ borrowed value does not live long enough
...
LL | }
   | -- borrow later used here
   | |
   | `vec` dropped here while still borrowed

error[E0597]: `vec` does not live long enough
  --> $DIR/borrowck-vec-pattern-element-loan.rs:23:25
   |
LL |     let vec: &[isize] = &vec;
   |                         ^^^^ borrowed value does not live long enough
...
LL | }
   | -- borrow later used here
   | |
   | `vec` dropped here while still borrowed

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0597`.
